# foundry

./: .gitignore  ARCHITECTURE.md  MCPS.md  ROADMAP.md  SKILLS.md  TODO.md  opencode.json  package.json  plan.md  skills-lock.json
.github/workflows/: ci.yml
.opencode/plugins/: sdlc-enforcer.ts
docs/: README.md
docs/architecture/: design-philosophy.md  execution-model.md  subsystem-boundaries.md  system-architecture.md
docs/brainstorming/: ARCHITECHTRE.md  MCPS.md  SKILLS.md
docs/deployment/: installation-and-configuration.md
docs/development/: contributing.md  repository-structure.md  technical-debt-and-tradeoffs.md
docs/execution/: execution-and-validation.md  model-routing-and-providers.md  repository-and-context-indexing.md  validation-and-tools.md
foundry/: .gitignore  README.md  package.json
game/: generate-audio.py  index.html  package.json
game/src/: App.tsx  (+1 more)
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
planning/: DEPENDENCY-GRAPH.md  MASTER-ROADMAP.md  QUALITY-AND-VALIDATION.md  README.md  RUNTIME-SPEC.md  TOOLING-AND-WORKFLOWS-SPEC.md
sdlc/: .pre-commit-config.yaml  __init__.py  __main__.py  config.py  exceptions.py  log.py  models.py  opencode.json  pixi.toml  pyproject.toml
sdlc-mcp/: .gitignore  opencode.json  pyproject.toml
sdlc-mcp/.opencode/graphs/: sdlc-phases.yaml
sdlc-mcp/.opencode/skills/foundry/: SKILL.md
sdlc-mcp/.opencode/skills/foundry/prompts/: testing.md
sdlc-mcp/.opencode/skills/sdlc/prompts/: done.md
sdlc-mcp/config/: llm_config.yaml
sdlc-mcp/configs/: model_routing.yaml
sdlc-mcp/configs/prompts/: debate_agent_coding.txt  debate_agent_testing.txt  judge_planning_to_coding.txt
sdlc-mcp/src/sdlc_mcp/: __init__.py  __main__.py  config.py  log.py  models.py
sdlc-mcp/src/sdlc_mcp/adapters/: base.py
sdlc-mcp/src/sdlc_mcp/adapters/execution/: __init__.py  process_watchdog.py  sandbox.py
sdlc-mcp/src/sdlc_mcp/adapters/llm/: __init__.py  _testing.py  base.py  providers.py  routing.py
sdlc-mcp/src/sdlc_mcp/adapters/memory/: __init__.py  acervo.py  engram.py
sdlc-mcp/src/sdlc_mcp/adapters/tools/: graphify.py  mypy.py  pytest.py  ruff.py  tree_sitter.py
sdlc-mcp/src/sdlc_mcp/bootstrap/: __init__.py  __main__.py  engine.py  migrations.py  workspace.py
sdlc-mcp/src/sdlc_mcp/cli/: __init__.py  doctor.py  init.py  main.py  models.py  repair.py  upgrade.py
sdlc-mcp/src/sdlc_mcp/configs/: __init__.py  budget_policy.yaml
sdlc-mcp/src/sdlc_mcp/configs/prompts/: debate_agent_planning.txt  debate_agent_review.txt  debate_agent_specs.txt  debate_consensus_judge.txt  judge_coding_to_review.txt  judge_review_to_coding.txt
sdlc-mcp/src/sdlc_mcp/engine/: __init__.py  checkpoint.py  consensus.py  debate_runtime.py  dependency_graph.py  execution_policy.py  judge.py  orchestrator.py  schema_checks.py
sdlc-mcp/src/sdlc_mcp/graphs/: feature.yaml
sdlc-mcp/src/sdlc_mcp/runtime/: app.py  store_sqlite.py  tracing.py  write_queue.py
sdlc-mcp/src/sdlc_mcp/runtime/pipelines/: default.py
sdlc-mcp/src/sdlc_mcp/runtime/tools/: debug.py  phase.py  task.py
sdlc-mcp/src/sdlc_mcp/templates/: __init__.py
sdlc-mcp/src/sdlc_mcp/validators/deterministic/: results.py  runner.py
sdlc-mcp/tests/: conftest.py  test_cli.py  test_cli_merger.py  test_foundation.py  test_integration.py  test_llm_providers.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase2.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py  test_templates.py  test_workspace_detection.py
sdlc/.opencode/: opencode-schema.json
sdlc/.opencode/context/project/: patterns.md  security.md  style.md  testing.md
sdlc/.opencode/context/sdlc/: architecture.md  phase-guide.md  quality.md
sdlc/.opencode/plugins/: sdlc-enforcer.ts
sdlc/.opencode/skills/sdlc/prompts/: chatting.txt  coding.txt  debug.txt  executor.txt  planning.txt  review.txt  specs.txt  testing.txt
sdlc/adapters/execution/: __init__.py  process_watchdog.py  sandbox.py
sdlc/adapters/llm/: __init__.py  _testing.py  providers.py  routing.py
sdlc/adapters/memory/: __init__.py  acervo.py  engram.py
sdlc/adapters/tools/: bandit.py  benchmarks.py  coverage.py  graphify.py  mypy.py  pytest.py  ruff.py  semgrep.py  tree_sitter.py
sdlc/adapters/vcs/: __init__.py  git.py  github.py
sdlc/agents/: opencode.json
sdlc/cli/: __init__.py  doctor.py  init.py  install.py  main.py  merger.py  repair.py  upgrade.py
sdlc/config/: llm_config.yaml
sdlc/configs/: budget_policy.yaml  mcps.yaml  model_routing.yaml  policy.yaml  skills.yaml  validators.yaml
sdlc/configs/prompts/: judge_review_to_testing.txt  judge_specs_to_planning.txt
sdlc/engine/: __init__.py  checkpoint.py  confidence_gate.py  consensus.py  context_harvester.py  debate_runtime.py  dependency_graph.py  drift_detector.py  execution_policy.py  hierarchical_graph.py  integration_manager.py  judge.py  judge_hierarchy.py  orchestrator.py  orchestrator_runtime.py  phase_graph.py  progress_tracker.py  prompt_registry.py  recovery_engine.py  regression_manager.py  replanner.py  replay.py  repository_indexer.py  retry_policy.py  reviewer_debate.py  schema_checks.py  team_coordinator.py  test_generator.py
sdlc/graphs/: bugfix.yaml  docs.yaml  feature_harvesting.yaml  refactor.yaml  research.yaml
sdlc/runtime/: app.py  autonomous_controller.py  budget_controller.py  dashboard.py  enhanced_checkpoint.py  execution_runtime.py  memory_store.py  phase_contracts.py  rollback_manager.py  state_manager.py  store_backend.py  store_sqlite.py  tool_executor.py  tool_gate.py  tracing.py  write_queue.py
sdlc/runtime/pipelines/: default.py
sdlc/runtime/tools/: debug.py  phase.py  task.py
sdlc/templates/: __init__.py
sdlc/tests/: test_cli.py  test_cli_merger.py  test_foundation.py  test_integration.py  test_llm_providers.py  test_opencode_config.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase2.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py  test_templates.py
sdlc/validators/deterministic/: results.py  runner.py
(+104 files in other folders)
